--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,37 @@ h2 {
   width: 75%;
 }
 
-#text-input {
+.messages-container {
+  height: calc(750px - 1em);
+  overflow: auto;
+}
+
+.message-container {
+  margin-bottom: 1em;
+}
+
+.message {
+  background-color: #37b5bd;
+  border-radius: 15px;
+  color: white;
+  display: inline-block;
+  max-width: 100%;
+  padding: .5em 1em;
+  word-wrap: break-word;
+}
+
+.author {
+  color: gray;
+  font-size: small;
+  padding-left: .5em;
+}
+
+.text-container {
   bottom: 2em;
-  position: absolute; 
+  position: absolute;
+  width: 75%;
+}
+
+#text-input {
   width: 50%;
 }
